fixing hero and webform on mobile

--- a/docroot/sites/all/themes/ambitious/sass/content.scss
+++ b/docroot/sites/all/themes/ambitious/sass/content.scss
@@ -1110,7 +1110,7 @@ a {
 		}
 	}
 	.holder{
-		padding-top: 5%;
+		//padding-top: 5%;
 		margin-bottom: 130px;
 
 		@include breakpoint($mobile) {
