--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -420,7 +420,8 @@
   .slider-block{
     @include breakpoint($mobile){
       margin-top:0;
-      top: -160px;
+      top: -30px;
+      margin-top: -130px;
     }
   }
   .slider-block .block .slider-container{
